@@ -1,2 +1,0 @@
-Images by tigert, originally taken from Enlightenment 0.15, matches the
-GTK theme of the same name
