@@ -1,2 +1,0 @@
-Imaxes de tigert, orixinalmente tomadas de Enlightenment 0.15, encaixa
-co tema GTK co mesmo nome
