@@ -1,2 +1,0 @@
-Immagini di tigert, estratte da Enlightenment 0.15, corrisponde al
-tema GTK con lo stesso nome
