@@ -1,2 +1,0 @@
-画像は tigert によるもので、もとは GTK+ の同名のテーマにマッチする
-Enlightenment 0.15 のテーマからとっています。
