@@ -1,2 +1,0 @@
-Obrazy stworzone przez tigerta, pochodzące z Enlightenment 0.15,
-odpowiadają motywowi GTK o tej samej nazwie
