@@ -1,4 +1,5 @@
 2011-06-13  Christopher Roy Bratusek <nano@tuxfamily.org>
+	* themes/brushed-metal/
 	* themes/simple/
 	* themes/smaker/
 	* themes/mono/
